// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BuyButton /> should match snapshot loading 1`] = `
<DocumentFragment>
  <svg
    class="content-loader-mock"
  />
</DocumentFragment>
`;

exports[`<BuyButton /> should match snapshot normal 1`] = `
<DocumentFragment>
  <button
    data-block="true"
    data-isloading="false"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`<BuyButton /> should match snapshot unavailable 1`] = `
<DocumentFragment>
  <button
    data-block="true"
    data-isloading="false"
    disabled=""
  >
    <span
      class="buyButtonText"
    >
      Unavailable
    </span>
  </button>
</DocumentFragment>
`;
